# canonical

./: .gitignore  Cargo.toml  Makefile  README.md  test.sh
.github/workflows/: dusk_ci.yml
bridge/: Cargo.toml
bridge/src/: lib.rs
canon/: CHANGELOG.md  Cargo.toml  README.md
canon/src/: bridge.rs  canon.rs  cow.rs  debug.rs  dry_sink.rs  handle_bridge.rs  handle_host.rs  handle_hosted.rs  id.rs  implementations.rs  lib.rs  query.rs  repr.rs  repr_host.rs  repr_hosted.rs  store.rs  transaction.rs  void.rs
canon/src/store/: bridge.rs  host.rs  hosted.rs  mod.rs  void.rs
canon/tests/: btree.rs  derive.rs  fuzz_repr.rs  handle.rs  identifier.rs  identity.rs  integers.rs  mod.rs  stack.rs
canon_collections/: Cargo.toml  README.md
canon_collections/src/: lib.rs  stack.rs
canon_derive/: Cargo.toml
canon_derive/src/: lib.rs
canon_derive/tests/: derive.rs
canon_fuzz/: Cargo.toml
canon_fuzz/src/: lib.rs
canon_host/: Cargo.toml  README.md
canon_host/examples/counter/: Cargo.toml  Makefile  make.sh
canon_host/examples/counter/src/: generated.rs  lib.rs  output.rs
canon_host/examples/panic/: Cargo.toml
canon_host/examples/panic/src/: legacy.rs  lib.rs
canon_host/examples/storage/: Cargo.toml  Makefile  make.sh
canon_host/examples/storage/src/: lib.rs
canon_host/src/: common.rs  disk_store.rs  lib.rs  mem_store.rs  remote.rs  root.rs  wasm.rs
canon_host/tests/: counter_test.rs  counters.rs  panic_test.rs  root_test.rs  storage_test.rs  test.rs  wasm.rs  wasm_test.rs
canon_module/: Cargo.toml
canon_module/src/: common.rs  lib.rs  module.rs  panic_handling.rs  query.rs  test_resolver.rs  transaction.rs  wasm.rs
derive/: Cargo.toml
derive/src/: lib.rs
documentation/: announcement.md
examples/counter/: Cargo.toml  counter.wasm  make.sh
examples/counter/src/: lib.rs
host/: Cargo.toml
host/examples/counter/: Cargo.toml  make.sh
host/examples/counter/src/: lib.rs
host/src/: lib.rs  mem_store.rs
module_examples/: Cargo.toml
module_examples/modules/counter/: Cargo.toml  counter.wasm
module_examples/modules/counter/src/: lib.rs
module_examples/modules/delegate/: Cargo.toml  Makefile
module_examples/modules/delegate/src/: lib.rs
module_examples/modules/nstack/: Cargo.toml  Makefile  nstack_module.wasm
module_examples/modules/nstack/src/: lib.rs
module_examples/modules/panic/: Cargo.toml  Makefile  panic.wasm
module_examples/modules/panic/src/: lib.rs
module_examples/modules/resolver/: Cargo.toml  Makefile  resolver.wasm
module_examples/modules/resolver/src/: lib.rs
module_examples/tests/: common.rs  counter_test.rs  nstack_test.rs  panic_test.rs  resolver_test.rs
remote_derive/: Cargo.toml
remote_derive/src/: lib.rs
src/: bridge.rs  canon.rs  handle.rs  handle_bridge.rs  handle_host.rs  implementations.rs  lib.rs  sink.rs  snapshot.rs  source.rs  store.rs
tests/: derive.rs  recursive.rs  stack.rs  toy_store.rs
