[package]
name = "canonical"
version = "0.5.3"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dusk-network/canonical"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "A serialization library built for no_std environments where you want to deal with recursive datastructures."
license = "MPL-2.0"

[dependencies]
blake2b_simd = { version = "0.3", default-features = false }
arrayvec = { version = "0.5", default-features = false, features = ["array-sizes-33-128"] }
arbitrary = { version = "0.3", features = ["derive"], optional = true }
cfg-if = "1.0.0"
lazy_static = { version = "1.4", optional = true }
parking_lot = { version = "0.11", optional = true }


[dev-dependencies]
canonical_host = { path = "../canon_host", version = "0.5" }
canonical_derive = { path = "../canon_derive", version = "0.5" }
canonical_fuzz = { path = "../canon_fuzz", version = "0.5" }

[features]
host = ["blake2b_simd/std", "arbitrary", "lazy_static", "parking_lot"]
