[package]
name = "canonical"
version = "0.6.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dusk-network/canonical"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "A serialization library built for no_std environments where you want to deal with recursive datastructures."
license = "MPL-2.0"

[dependencies]
blake2b_simd = { version = "0.3", default-features = false }
arrayvec = { version = "0.5", default-features = false, features = ["array-sizes-33-128"] }
cfg-if = "1.0.0"

[dev-dependencies]
canonical_derive = { path = "../canon_derive" }
canonical_fuzz = { path = "../canon_fuzz" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blake2b_simd = "0.3"
arbitrary = "0.3"
lazy_static = "1.4"
parking_lot = "0.11"
