[package]
name = "canonical"
version = "0.6.3"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/dusk-network/canonical"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "A serialization library built for no_std environments where you want to deal with recursive datastructures."
license = "MPL-2.0"

[dependencies]
blake2b_simd = { version = "0.3", default-features = false }
cfg-if = "1.0.0"
array-init = "2.0"
dusk-varint = "0.1"

[dev-dependencies]
canonical_derive = { path = "../canon_derive", version = "0.6" }
canonical_fuzz = { path = "../canon_fuzz", version = "0.6" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blake2b_simd = "0.3"
arbitrary = "1.0"
