[package]
name = "canonical_collections"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dusk-network/canonical/canon_collections"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "Data structures for use with Canonical"
license = "MPL-2.0"

[dependencies]
canonical_derive = { path = "../canon_derive" }
canonical = { path = "../canon" }

[dev-dependencies]
canonical_host = { path = "../canon_host" }

[features]
host = ["canonical/host"]
