[package]
name = "canonical_derive"
version = "0.4.1"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dusk-network/canonical/canon_derive"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "The automatic derivation of Canon for structs, and enums."
license = "MPL-2.0"

[dependencies]
proc-macro2 = "1.0.10"
quote = "1.0.3"
syn = { version = "1.0.17" }
canonical = { path = "../canon", version = "0.4" }

[lib]
proc-macro = true
