[package]
name = "canonical_fuzz"
version = "0.4.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
repository = "https://github.com/dusk-network/canonical/canon_fuzz"
description = "Fuzzing helpers for Canonical encodings"
license = "MPL-2.0"

[dependencies]
canonical = { path = "../canon", features = ["host"], version = "0.4" }
canonical_host = { path = "../canon_host", version = "0.4" }
arbitrary = { version = "0.3" }
