[package]
name = "canonical_fuzz"
version = "0.6.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
repository = "https://github.com/dusk-network/canonical/canon_fuzz"
description = "Fuzzing helpers for Canonical encodings"
license = "MPL-2.0"

[dependencies]
canonical = { path = "../canon", version = "0.6.0" }
arbitrary = { version = "0.3" }
