[package]
name = "canonical_fuzz"
version = "0.7.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
repository = "https://github.com/dusk-network/canonical/canon_fuzz"
description = "Fuzzing helpers for Canonical encodings"
license = "MPL-2.0"

[dependencies]
canonical = { path = "../canon", version = "0.7.0" }
arbitrary = { version = "1.0" }
rand = "0.8.3"
