[package]
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
name = "canonical_host"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/dusk-network/canonical/canon_host"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "The plumbing for the host responsible for the wasm host calls."
license = "MPL-2.0"

[dependencies]
lazy_static = "1.4"
parking_lot = "0.11"
wasmi = "0.6.0"
canonical = { path = "../canon", version = "0.2.0" }
canonical_derive = { path = "../canon_derive", version = "0.2.0" }

[dev-dependencies]
counter = { path = "examples/counter", features = ["host"], version = "0.1.0" }
storage = { path = "examples/storage", features = ["host"], version = "0.1.0" }
