[package]
name = "canonical_module"
version = "0.4.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dusk-network/canonical/canon_derive"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "Modules"
license = "MPL-2.0"

[dependencies]
canonical_host = { path = "../canon_host", optional = true }

[features]
host = ["canonical_host"]