[package]
name = "canonical_module"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dusk-network/canonical/canon_derive"
keywords = ["canon", "serialisation", "no_std", "ffi", "database"]
description = "Modules"
license = "MPL-2.0"

[dependencies]
arrayvec = { version = "0.5.2", default-features = false }
canonical = { path = "../canon", version = "0.4" }
canonical_derive = { path = "../canon_derive", version = "0.4" }
wasmi = { version = "0.6.0" }

[features]
host = []
