[package]
name = "counter"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
canonical = { path = "../.." }
canonical_derive = { path = "../../derive" }
bridge = { path = "../../bridge" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'