[package]
name = "counter"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
canonical = { path = "../../../canon", features = ["bridge"] }
canonical_derive = { path = "../../../canon_derive" }
canonical_remote_derive = { path = "../../../remote_derive" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'