[package]
name = "counter"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { path = "../../../canon" }
canonical_derive = { path = "../../../canon_derive" }

[features]
bridge = ["canonical/bridge"]