[package]
name = "counter"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { path = "../../../canon", default-features = false }
canonical_derive = { path = "../../../canon_derive" }
canonical_host = { path = "../../../canon_host" , optional = true }


[features]
host = ["canonical_host"]
