[package]
name = "storage"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = "0.4.0"
canonical_derive = "0.4.0"
canonical_host = { version = "0.4.0", optional = true }
nstack = { path = "../../../../nstack" }

[features]
host = ["canonical/host", "canonical_host"]
