[package]
name = "delegate"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { path = "../../../canon", default-features = false }
canonical_derive = { path = "../../../canon_derive" }
canonical_module = { path = "../../../canon_module" }

[features]
host = []
