[package]
name = "nstack_module"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { version = "0.4", default-features = false }
canonical_derive = "0.4"
canonical_host = { version = "0.4", optional = true }

microkelvin = "0.5.2"
nstack = "0.6"

[features]
host = ["canonical_host"]

[patch.crates-io]
canonical = { path = "../canon" }
canonical_derive = { path = "../canon_derive" }
canonical_host = { path = "../canon_host" }
canonical_fuzz = { path = "../canon_fuzz" }