[package]
name = "nstack_module"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { path = "../../../canon", default-features = false }
canonical_derive = { path = "../../../canon_derive" }
canonical_host = { path = "../../../canon_host", optional = true }
canonical_module = { path = "../../../canon_module" }

microkelvin = "0.5.2"
nstack = "0.6"

[features]
host = ["canonical_host"]
